# project-auto-emailer

./: .gitignore  CLAUDE.md  README.md  config.example.json  config.json  pyproject.toml
src/auto_emailer/: cli.py  config.py  core.py  email.py  installer.py  llm.py  scheduler.py  search.py  usage.py
